--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://akif65089:Akif1234@cluster0.ptc5i.mongodb.net/
+MONGO_URI=mongodb+srv://akif65089:HrJhTe6Bb6iSLoqy@cluster0.ptc5i.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SPOONACULAR_API_KEY=c9669422e3084f98b7bb9a1dd2bcb6a1
